# httpie

./: Cargo.toml  README.md  cliff.toml
src/: handle.rs  lib.rs  main.rs  opts.rs
