[package]
name = "httpie"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.10", features = ["derive"] }
colored = "2.1.0"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
